# Cmake_Practice_Demo

./: .gitignore
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  runhello.sh
demo2/src/: CMakeLists.txt
demo3/: CMakeLists.txt
demo3/include/: hello.h
demo3/src/: hello.cpp
demo4/: CMakeLists.txt
demo4/src/: main.cpp
demo5/: CMakeLists.txt
demo5/src/: main.cpp
demo6/: CMakeLists.txt
demo7/: CMakeLists.txt
