cmake_minimum_required(VERSION 3.4)

PROJECT(curl)
FIND_PACKAGE(CURL)
ADD_EXECUTABLE(curltest src/main.cpp)
IF(CURL_FOUND)
 INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
 TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
 MESSAGE(STATUS "CURL library found")
 MESSAGE(STATUS "${CURL_INCLUDE_DIR}: " ${CURL_INCLUDE_DIR})
ELSE(CURL_FOUND)
 MESSAGE(FATAL_ERROR ”CURL library not found”)
ENDIF(CURL_FOUND)


